--- a/docs/PacketFence_Aerohive_Quick_Install_Guide.asciidoc
+++ b/docs/PacketFence_Aerohive_Quick_Install_Guide.asciidoc
@@ -18,433 +18,267 @@ include::includes/global-attributes.asciidoc[]
 
 About this Guide
 ----------------
-This guide has been created in order to help sales engineers, product managers, or network specialists demonstrate the PacketFence capabilities on-site with an existing or potential customer.  It can also provide guidelines to setup a proof of concept for a potential PacketFence deployment using the Aerohive equipment.
+This guide has been created in order to provide guidelines to deploye a Aeroive Wireless APs and the associated management in a PacketFence contexte, wether it is with a standalown server, a cluster or PacketFencZEN deployement.
 
-The instructions are based on version {release_version} of the PacketFence Live Image.
+NOTE: AeroHIVE products are a bit different compared to the other vendors. They support either a local HiveManager (kind of wireless controller) or a cloud-based HVM. However, the configuration is the same for the local and the cloud-based controller. Note that all the config are made on the HVM and then pushed to the APs. The instructions are based on version {release_version} of the PacketFence.
 
 Assumptions
 -----------
-* You will need a USB key with a capacity of at least 4GB;
-* You will need a laptop or a PC from which the PacketFence Live USB key will run from;
-* You will deploy a VLAN enforcement environment according to the customer specifications;
-* Your customer will provide the network equipment (switch, cables, etc) to interconnect this PoC setup;
+* You already have a PacketFence server(s) up and running, (Standalone, cluster or ZEN)
+  ** If not, please refer to the https://packetfence.org/doc/PacketFence_Administration_Guide.html[PacketFence Administration Guide].
+* The network architecture is in order to give acces to the Aerohive Access Point, and have access to internet.
+* The VLANs are defined for registration, isolation and management networks.
+ * From this doc, we will assume that the VLANs tags are define like following :
+  ** Registration VLAN ID 2, Subnet 192.168.2.0/24,
+  ** Isolation VLAN ID 3, Subnet 192.168.3.0/24,
+  ** Production VLAN ID 10, Subnet 172.16.1.0/24,
+* The VLans are spanned in the swtichs and switching L2 equipments, from the _Production Network_ to the PacketFenceServer(s)
+* The VLANs are allowed in the trunks.
 * Aerohive Access Point is loaded with HiveOS with version 6 or later;
 * HiveManager with version 6 or later.
 
+'''
+
 Quick Deployment
 ----------------
-Step 1: Pre-load
-~~~~~~~~~~~~~~~~
-This step is only necessary in the case you don't already have a pre-loaded PacketFence USB key. If you already have one, proceed to step 2, otherwise, follow these quick and simple instructions to pre-load a new USB key with PacketFence.
+Step 1: Set-Up the Aerohive APs and SSID
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-NOTE: The following process will remove everything from the USB key so if you currently have stuff on it, make sure to do backups!
+Logon to your Hive Manager interface::
+For this example, we will assume that we are on the _Cloud_ https://myhive-auth.aerohive.com[MyHive.aerohove.com] solution.
+* From _HiveManager_, Click on your *HiveManagerOnline Instances* _VHM-XXXXXX_
+* From _Network Configuration / 1-Choose Network Policy_, Click on *New*
+* Give a name to your Policy, and click *Create*
+* From _2-Configure Interfaces and User Access_, _SSID_, Click on *Choose* and Click on *New*
+* Give a SSID Profile Name, SSID Name, 
 
-Download the PacketFence USB key image
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Make sure you have the latest version of the PacketFence USB key image.
+For a Open Mac Authentication based SSID::
+* Click on *New*.
+ .  SSID Access Security: Open
+ . Check the box Enable MAC authentication
+* Click on *Save*
 
-Download the application to write the image to the USB key
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-To write the PacketFence image on a USB key, you'll need to use a third-party application that will provide you with a graphical interface to do so.
+image::docs/images/pfaerohive02.png[scaledwidth="100%",alt="AerohiveOpenSSIDconfig",align=right]
 
-Go to https://launchpad.net/win32-image-writer/0.6/0.6/+download/win32diskimager-binary.zip. That will download the necessary application. Once downloaded, extract the zip file.
+'''
 
-Write the PacketFence image to the USB key
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-First, make sure your USB key is plugged into the PC then open up the folder where you extracted the application and double-click the Win32DiskImager.exe file.
-Once done, simply choose the PacketFence USB image file (unzipped .img file), choose the device on which you want to write and click 'Write'.
+
+For a Secured based SSID::
+* Click on *New*.
+
+ SSID Access Security: *WPA/WPA2 802.1X (Enterprise)*
+ Key Management; WPA2-(WPA2 enterprise)-802.1X
+ Encryption method: CCMP (AES)
+
+image::docs/images/pfaerohive03.png[scaledwidth="100%",alt="AerohiveSecuredSSIDconfig",align=right]
+* Click on *Save*
+* From SSID, be sure to have selected both SSIDs previously created, and click *OK*
+
+image::docs/images/pfaerohive04.png[scaledwidth="100%",alt="AerohiveSSID",align=center]
+
+'''
+
+
+Add the RADIUS parameters created before::
+* Under _Authentication_ click on *<RADIUS Setting>*, and click on *New*
+* From _RADIUS Name_, give the name of the PaketFence server, for example,
+
+image::docs/images/pfaerohive05.png[scaledwidth="100%",alt="AAA Radius config",align=right]
+
+* From _Add a New RADIUS Server_, in _IP Adresse/Domain Name_, put the PacketFence Server IP
+* Give the _Shared Secret_ and _Confirm_ it.
+* And Click on *Apply*
+
+image::docs/images/pfaerohive06.png[scaledwidth="100%",alt="AAA Radius config",align=right]
+
+* Deploye the _Optionnal Setting(not supported by RADIUS Proxy)_ section and * [x] check the _Permit Dynamic Change of Authorization Message (RFC 3576)_
+* Click on *Save*
+:
+* Next to your _SSID Name_ Click on the *<RADIUS Setting>*, Click *OK*
+
+'''
+
+
+We will create the default VLAN to be assign by the AP, when a new Terminal get in the SSID ::
+* Under _User Profile_, Click on *Add/Remove*,and Click on *New*, in the _Default_ section,
+ ** You will need to greate one _User Profile_ for each VLANs used, for us, we will create 3 Users Profiles, Registration, Isolation and Production.
+* From Name, give the Name of a rules to Manage the VLANs with PacketFence (Registration ; Isolation ; Production).
+* From _Attribute Name_ , give the VLAN ID of the VLAN.
+* From Default VLan, Click on the (*+*) (New).
+* As a VLan ID, give the VLAN ID earlier Registration(2) , Isolation(3) or Production(10).
+* Click on *Save* and click on *Save* again on the _Configure interfaces and User Access_.
+
+image::docs/images/pfaerohive07.png[scaledwidth="100%",alt="User Profile creation",align=right]
+
+'''
+
+
+Create and add the other VLANs ::
+* Click on _Add/Remove_ in the _User Profile_ column.
+* Get back to the beginning of the VLAN creation task.
+
+'''
+
+
+Once done with the VLans ::
+* From the _Choose User Profiles_, select the _Default_ tab and Click on you _Registration_ VLAN tag.
+* From the _Authentication_ tab, select the _Isolation_ and the _Production_ VLANs tag. 
+* Click on *Save*
+
+For our example, here what is lookslike, with two SSIDs
+
+image::docs/images/pfaerohive08.png[scaledwidth="100%",alt="User Profile creation",align=right]
+
+Then, click on Continue, on top right of the page.
+
+'''
+
+Push your configuration to your AP::
+* From _Configure and Update Devices_, check your AP in _Device to Update_
+* Click on _Update_
+* Select _update Devices_
+* From _HiveOS Number of devices running earlier versions of HiveOS_, select *Upgrade these devices to the latest version of HiveOS*
+* Click on _Update_
+* Wait untill the date and time apprears under _Update Status_
+
 
 Step 2: Configure Network and PacketFence
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-The next step is the network setup and the PacketFence configuration. The following step is usually performed when you arrive at a customer site. Sometimes, you will know the network settings in advance, sometimes not. If you want to save time, you should ask/tell the client what is needed in order to have the demonstration running smoothly. That way, you will be able to preconfigure the PacketFence environment prior arrival.
-
-Preliminary Questions
-^^^^^^^^^^^^^^^^^^^^^
-Here is a quick list of questions to ask to a customer in order to easily configure a PacketFence environment:
-
-1. What is the VLAN ID and subnet to be used for a registration VLAN? (ie. VLAN ID 2, Subnet 192.168.2.0/24)
-2. What is the VLAN ID and subnet to be used for an isolation VLAN? (ie. VLAN ID 3, Subnet 192.168.3.0/24)
-3. What is the VLAN ID of the production VLAN? (ie. VLAN ID 10)
-4. A list of production DHCP server(s) (for rogue DHCP detection)
-
-Steps for the customer
-^^^^^^^^^^^^^^^^^^^^^^
-Some steps needs to be taken by the customer for having the network ready. Here is a list of what we think should be ready for a demo:
-
-* 1 TRUNK port to connect the demonstration PC which will run the PacketFence environment. The native VLAN should be a management VLAN that will be used for communication between the equipment and the environment
-* 1 TRUNK port to connect the AP
-
-Configuring your PacketFence environment
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Simply plug the previously created USB key in one of the demonstration PC USB port. You will have to make sure the PC will boot from the USB key (it is usually a pre-boot option or a setting in the BIOS).
-
-Before booting, make sure the network cable coming from the TRUNK port for the demonstration PC is correctly plugged in the switch and the PC and that the link is up.
-
-Once powered, the PC will boot from the USB key and will automatically get to a graphical user interface with an opened web browser prompting for PacketFence configuration. The configuration process is a five steps process at the end of which, the USB key will be a persistent working PacketFence environment.
-
-Step 1: Enforcement
-+++++++++++++++++++
-The first and most important step of the configuration process. This is where you'll choose the enforcement technique; either VLAN (out-of-band), INLINE (in-band) or WebAuth.
-
-The choice(s) made on this step will influence the next step where you'll need to configure the different networks.
-
-Each enforcement mode has its own required interface types that you'll have to configure on step 2.
-
-VLAN enforcement
-^^^^^^^^^^^^^^^^
-
-Step 2: Networks
-++++++++++++++++
-This step will ask you to statically configure your network interfaces (note that DHCP interfaces configuration is not supported yet).
-
-Depending on the choice(s) made on step 1, you'll have to configure the required types of interface. The web interface will list all currently installed network interfaces on the system. An IP and a netmask will be visible if the network interface is configured (either by DHCP or already manually configured). You can edit those ones, create/delete VLANs on physical interfaces and enable/disable an interface. Note that theses changes are effective on the moment you make them. Persistence will be written only for ENABLED interfaces.
-
-In all time, you'll need to set a Management interface.
-
-Required interface types for inline enforcement:
-
-    Management
-    Inline
-
-Required interface types for VLAN enforcement:
-
-    Management
-    Registration
-    Isolation
-
-Note that you can only set ONE (1) management interface. This one will work for both in the case you choose both modes.
-
-In our customer scenario, you will create two new vlans on the wired interface (will be eth0 most of the time).
-To do so, click the 'Add VLAN' button besides the wired interface for each of the needed vlan:
-
-Here's a sample configuration for both of them:
-
-Registration
-
-    Virtual LAN ID: 2
-    IP Address: 192.168.2.1
-    Netmask: 255.255.255.0
-
-Isolation
-
-    Virtual LAN ID: 3
-    IP Address: 192.168.3.1
-    Netmask: 255.255.255.0
-
-Don't forget to also edit the physical interface with the correct management network information by clicking the 'Edit' button next to it.
-
-According to our customer scenario, you will associate the correct type the each interfaces.
-
-    eth0: Management
-    eth0 VLAN 2: Registration
-    eth0 VLAN 3: Isolation
-
-Make sure that those three (3) interfaces are in an Enabled state for the persistence to occur.
-
-We also need to set the Default Gateway which will generally be the gateway of the management network.
-
-Once everything's set, click 'Continue' to proceed with the next step.
-
-Step 3: Database Configuration
-++++++++++++++++++++++++++++++
-This step will configure the MySQL server needed by PacketFence. Database and schema will be created as well as the necessary user for operations. Root account will also be secured if necessary (set a password and disallow remote login).
-
-Since Debian based MySQL installations are not "secured", you will need to go through it.
-That step is fairly simple to accomplish and is a one time deal.
-
-In the root account credentials section, enter root as Username and click 'Test'. You'll be prompted for a new root password. Choose a password for the MySQL root user and click 'Save'. You can now enter your newly created password in the root account credentials section and click 'Test'.
-
-Next section of this step is the PacketFence user account on the MySQL server. Simply leave the default pf username here and choose of a password. This one will automatically be set in the PacketFence configuration where you'll be able to retrieve it in any case. Once the password entered twice, click 'Create user'.
-
-Third section will create the database and load the correct schema on it. Simply leave the default and click 'Create tables and indexes'.
-
-You should have 'Success' beside these three section, click 'Continue'.
-
-Step 4: PacketFence Configuration
-+++++++++++++++++++++++++++++++++
-This step will configure the general options of your PacketFence installation. Theses are needed configurations that will most of the time fits customer specifications.
-
-Almost all of the required information here are self-explanatory. The only one that could be confusing is the DHCP Servers section. In this one, enter a comma-delimited list of all the DHCP Server on the customer network so when PacketFence will see DHCP traffic originating from these IPs, no rogue-dhcp alerts will be triggered.
-
-Click 'Continue' once all the fields are completed.
-
-Step 5: Administration
-++++++++++++++++++++++
-This is the step where you create the administrative user to access the PacketFence Administration Web Interface.
-
-Simply provide the desired username and password, then click 'Create user'.
-
-Step 6: Services - Confirmation
-+++++++++++++++++++++++++++++++
-The last but not the least. Here, you start the PacketFence server according to the configurations made in the previous steps. If everything goes as expected, you'll be prompted by a window inviting you to continue to the web administration interface.
-
-You'll be able to login to the PacketFence web administration interface with the credentials created in Step 4.
-
-Services status will help you monitor if everything goes as expected. If not, you'll see which service is in trouble and the log output will help you determine the problem that occurs.
 
 Configuring Aerohive access point in PacketFence
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Now that you have a fully functional PacketFence installation, you'll need to add the Aerohive AP to the PacketFence switches database for correct integration.
 
-To do so, login to the PacketFence web administration interface if it is not already done. Click on the 'Configuration' tab and select the Switches section.
+We will nowneed to create a new switch, in PacketFence to be able to manage the terminals behind the Aerohive APs.
 
-We'll use the clone function to add a new switch (the AeroHive AP) to the PacketFence database. With the mouse pointer, go over the default switch and you'll see a set of icons appearing at the left of it. Click on the second one (a paper sheet with a plus sign).
+Logon to your PacketFence interface::
+* From _Configuration / Policies and Access Control / Switches /_
+* On the line where there is the _default_, on the right, Click on _CLONE_.
 
-Configure the switch like the following:
 
-image::docs/images/aerohive-pf-config-1.png[scaledwidth="100%",alt="General switch settings"]
+image::docs/images/pfaerohive09.png[scaledwidth="100%",alt="New switch configuration",align=right]
 
-image::docs/images/aerohive-pf-config-vlan.png[scaledwidth="100%",alt="VLAN switch settings"]
+'''
 
-image::docs/images/aerohive-pf-config-snmp.png[scaledwidth="100%",alt="SNMP switch settings"]
 
-Modify your RADIUS secret.
+In _Definition_ ::
+* _IP Address/MAC Address/Range (CIDR)_, give the network adress of your _Production_ network,for us, it will be *172.16.1.0/24*
+* _Description_, give a description so you can quickly see what it is about,
+* From the _Type_ list, select *AeroHIVE AP*.
 
-Click 'Add switch'
+NOTE: *TIP*: You can type directly the name you are looking forin the field
 
-The newly added access point should show up in the list.
+* From _Mode_ select *Production*
+* _Switch Group_ by defaultset to *None*.
+* _Deauthentication Method_ set to *RADIUS*
+* Click *SAVE*
 
-PacketFence configuration is done. You may now reboot the demonstration PC (leave the USB key in). Once rebooted, the web browser should open in the PacketFence web administration interface.
+image::docs/images/pfaerohive10.png[scaledwidth="100%",alt="New switch configuration",align=right]
 
-<<<
+'''
 
-WebAuth Enforcement
-^^^^^^^^^^^^^^^^^^^
 
-Step 2: Networks
-++++++++++++++++
-This step will ask you to statically configure your network interfaces (note that DHCP interfaces configuration is not supported yet).
+In _Role_ ::
+* Set all VLans ID in each roles.
 
-Depending on the choice(s) made on step 1, you'll have to configure the required types of interface. The web interface will list all currently installed network interfaces on the system. An IP and a netmask will be visible if the network interface is configured (either by DHCP or already manually configured). You can edit those ones, create/delete VLANs on physical interfaces and enable/disable an interface. Note that theses changes are effective on the moment you make them. Persistence will be written only for ENABLED interfaces.
+image::docs/images/pfaerohive11.png[scaledwidth="100%",alt="New switch configuration",align=right]
 
-In all time, you'll need to set a Management interface.
+'''
 
-Required interface types for WebAuth enforcement:
 
-    portal
+In _RADIUS_ ::
+* Modify the secret passphrase previously sets in the AeroHive Hive Manager,
+* Click on *SAVE*
 
-Note that you can only set ONE (1) management interface. This one will work for both in the case you choose both modes.
+This end the PacketFence configuration.
 
-As an example we will use the Management interface as our portal interface. You will need to 'portal' in the setting 'Additional listening daemon(s)'.
+'''
 
-According to our customer scenario, you will associate the correct type the each interfaces.
+Web Auth Configuration
+----------------------
 
-    eth0: Management
+In this part we will describe the WebAuth configuration for Aerohive APs.
 
-Make sure that this interface is in an Enabled state for the persistence to occur.
 
-We also need to set the Default Gateway which will generally be the gateway of the management network.
+Assumption :
+~~~~~~~~~~~~
+We will use the same previous contexte, but we will have only one VLAN, the Production (11)
+Keep in mind that we will also use the natvite VLAN tag (1) as default one.
 
-Once everything's set, click 'Continue' to proceed with the next step.
 
-Step 3: Database Configuration
-++++++++++++++++++++++++++++++
-This step will configure the MySQL server needed by PacketFence. Database and schema will be created as well as the necessary user for operations. Root account will also be secured if necessary (set a password and disallow remote login).
+'''
 
-Since Debian based MySQL installations are not "secured", you will need to go through it.
-That step is fairly simple to accomplish and is a one time deal.
+Step 1 : Configure the Wireless APs
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-In the root account credentials section, enter root as Username and click 'Test'. You'll be prompted for a new root password. Choose a password for the MySQL root user and click 'Save'. You can now enter your newly created password in the root account credentials section and click 'Test'.
+Create a new Captive Portal Profile::
+* From the HiveManager, go to *CONFIGURATION -> ADVANCED CONFIGURATION -> AUTHENTICATION -> Captive Web Portals*
+* Click on *New*
+* Give it a name,
+* _Registration Type_ must be *External Authentication*
+* Click on _Captive Web Portal Login Page Settings_ to deploye the configuration window.
+* _Login URL_ must be *http://YOUR_PACKETFENCE_SERVER_IP/AeroHIVE::AP*
+* _Password Encryption_ : *No Encryption (Plaintext Password)*
+* Click on *Save*
 
-Next section of this step is the PacketFence user account on the MySQL server. Simply leave the default pf username here and choose of a password. This one will automatically be set in the PacketFence configuration where you'll be able to retrieve it in any case. Once the password entered twice, click 'Create user'.
+image::docs/images/pfaerohive14.png[scaledwidth="100%",alt="Captive Portal SSID configuration",align=right]
 
-Third section will create the database and load the correct schema on it. Simply leave the default and click 'Create tables and indexes'.
+NOTE: It is not recommended to use a unique SSID for other authentication methode (Mac Auth, 802.1x, ...)
 
-You should have 'Success' beside these three section, click 'Continue'.
+Create or modify an SSID to add the Captive Portal fonction::
+* From the HiveManager, go to *CONFIGURATION -> SSIDS -> Select your SSID.*
+* From _SSID Access Security_ , Check *Enable Captive Web Portal*
+* Click *Save*
 
-Step 4: PacketFence Configuration
-+++++++++++++++++++++++++++++++++
-This step will configure the general options of your PacketFence installation. Theses are needed configurations that will most of the time fits customer specifications.
+* From the HiveManager, go to *CONFIGURATION -> NETWORK POLICIES*, Select your policy,
+* From _Configure Interfaces and User Access_, you will now have a _CWP_ symbole under _Authentication_.
+* Under _User Profile_ , Click on *Add/Remove* and select the _default-profile_ (1) optionto have the native VLAN as default.
+* Click on *Save*
 
-Almost all of the required information here are self-explanatory. The only one that could be confusing is the DHCP Servers section. In this one, enter a comma-delimited list of all the DHCP Server on the customer network so when PacketFence will see DHCP traffic originating from these IPs, no rogue-dhcp alerts will be triggered.
+image::docs/images/pfaerohive12.png[scaledwidth="100%",alt="Captive Portal SSID configuration",align=right]
 
-Click 'Continue' once all the fields are completed.
 
-Step 5: Administration
-++++++++++++++++++++++
-This is the step where you create the administrative user to access the PacketFence Administration Web Interface.
 
-Simply provide the desired username and password, then click 'Create user'.
+'''
 
-Step 6: Services - Confirmation
-+++++++++++++++++++++++++++++++
-The last but not the least. Here, you start the PacketFence server according to the configurations made in the previous steps. If everything goes as expected, you'll be prompted by a window inviting you to continue to the web administration interface.
+Push your configuration to your AP::
+* From _Configure and Update Devices_, check your AP in _Device to Update_
+* Click on _Update_
+* Select _update Devices_
+* From _HiveOS Number of devices running earlier versions of HiveOS_, select *Upgrade these devices to the latest version of HiveOS*
+* Click on _Update_
+* Wait untill the date and time apprears under _Update Status_
 
-You'll be able to login to the PacketFence web administration interface with the credentials created in Step 4.
 
-Services status will help you monitor if everything goes as expected. If not, you'll see which service is in trouble and the log output will help you determine the problem that occurs.
 
-Configuring Aerohive access point in PacketFence
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-Now that you have a fully functional PacketFence installation, you'll need to add the Aerohive AP to the PacketFence switches database for correct integration.
+Step 2: Configure PacketFence
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-To do so, login to the PacketFence web administration interface if it is not already done. Click on the 'Configuration' tab and select the Switches section.
+Configure the _Production_ interface to send the _Portal_.
+* Go to *CONFIGURATION -> NETWORK CONFIGURATION -> Interfaces*
+* Under _LogicalName_, click on your interface name,
+* _Additionnal listening daemon(s)_, Add *portal*
+* Click on *SAVE*
 
-We'll use the clone function to add a new switch (the AeroHive AP) to the PacketFence database. With the mouse pointer, go over the default switch and you'll see a set of icons appearing at the left of it. Click on the second one (a paper sheet with a plus sign).
 
-Configure the switch like the following:
+image::docs/images/pfaerohive13.png[scaledwidth="100%",alt="Captive Portal SSID configuration",align=center]
 
-image::docs/images/aerohive-pf-config-webauth.png[scaledwidth="100%",alt="General switch settings"]
 
-The section Roles should be empty while doing webauth.
+'''
 
-image::docs/images/aerohive-pf-config-snmp.png[scaledwidth="100%",alt="SNMP switch settings"]
+Refs and Externals Informations
+-------------------------------
 
-Under the tab RADIUS, please set your RADIUS secret.
+Registering on HiveManager Connect ::
+ * https://www.youtube.com/watch?v=tznxKRzsAnw[Video registering for Connectand Onboarding Devices]
 
-Click 'Add switch'
+My Hive Portal ::
+ * https://myhive-auth.aerohive.com[My Hive Portal]
 
-The newly added access point should show up in the list.
+PacketFence Documentation ::
+ * https://packetfence.org/doc/PacketFence_Administration_Guide.html[PacketFence Administration Guide]
+ * https://packetfence.org/support/index.html#/documentation[PacketFence General Documentation]
 
-PacketFence configuration is done. You may now reboot the demonstration PC (leave the USB key in). Once rebooted, the web browser should open in the PacketFence web administration interface.
 
-Step 3: Configure Aerohive
-~~~~~~~~~~~~~~~~~~~~~~~~~~
-This section will help you configure your Aerohive AP for integration with PacketFence using the VLAN-based enforcement.
+PacketFence GitHub ::
+ * https://github.com/inverse-inc/packetfence[PacketFence *GitHub*]
 
-Connect APs and Controller
-^^^^^^^^^^^^^^^^^^^^^^^^^^
-First thing to do is to connect the HiveManager. Like you saw in Step 2, make sure to connect the AP on the TRUNK port configured for it.
-
-Provision the HiveManager
-^^^^^^^^^^^^^^^^^^^^^^^^^
-By default, the HiveManager might be empty, add your AP via its serial number. If necessary update the firmware of the HiveManager and the AP.
-
-NOTE: Please refer to the 'Aerohive Quick Devices Start Guide' to add devices: http://docs.aerohive.com/330000/docs/help/english/documentation/AerohiveDevicesQuickStart.pdf
-
-NOTE: Please refer to the following guide to learn more about the HiveManager: http://docs.aerohive.com/330000/docs/help/english/documentation/Aerohive_HiveManagerNG_GettingStartedGuide.pdf
-
-VLAN Enforcement
-^^^^^^^^^^^^^^^^
-Setup the SSIDs
-^^^^^^^^^^^^^^^
-In this guide, we will configure one open SSID using RADIUS MAC-based filtering and one secured SSID using WPA2 Enterprise.
-
-Login to your HiveManager using the admin credentials. You should see the Dashboard. Click on the 'Configure' pane, and follow the following steps.
-
-Configure the AAA Servers
-+++++++++++++++++++++++++
-On the left menu, click on 'Advanced Configuration', then 'Authentication', then 'AAA Client Settings'. We need to add the PacketFence RADIUS server here. Click on the 'New' button, and provide follow this configuration.
-
-image::docs/images/aerohive-radius-pf.png[scaledwidth="100%",alt="RADIUS server configuration"]
-
-Click Ok to save your changes.
-
-Configure the Open SSID
-+++++++++++++++++++++++
-On the left menu, click on 'SSIDs'. Click the 'New' button, and configure the SSID like in the following screen capture:
-
-image::docs/images/aerohive-ssid-public.png[scaledwidth="100%",alt="SSID open configuration"]
-
-Click OK to save the SSID.
-
-Configure the Secure SSID
-+++++++++++++++++++++++++
-On the left menu, click on 'SSIDs'. Click the 'New' button, and configure the SSID like in the following screen capture:
-
-image::docs/images/aerohive-ssid-secure.png[scaledwidth="100%",alt="SSID secure configuration"]
-
-Click OK to save the SSID.
-
-Configure User Profile
-^^^^^^^^^^^^^^^^^^^^^^
-You will now need to create user profile matching your VLAN assignments, the "Default VLAN" have been created before to match the desired VLAN number.
-
-Create user profile as follow:
-
-image::docs/images/aerohive-user-profile-reg.png[scaledwidth="100%",alt="User profile registration"]
-
-image::docs/images/aerohive-user-profile-prod.png[scaledwidth="100%",alt="User profile production"]
-
-Configure SNMP
-^^^^^^^^^^^^^^
-You now need to configure the SNMP to add a valid read community string. Click on the 'Configure' pane, and on 'Advanced Configuration', then 'Management Policies', then 'SNMP Assignments'. Now click on 'New' and follow this configuration.
-
-image::docs/images/aerohive-add-snmp.png[scaledwidth="100%",alt="SNMP configuration"]
-
-<<<
-
-WebAuth Enforcement
-^^^^^^^^^^^^^^^^^^^
-Setup the SSIDs
-^^^^^^^^^^^^^^^
-In this guide, we will configure one open SSID using RADIUS MAC-based filtering and one secured SSID using WPA2 Enterprise.
-
-Login to your HiveManager using the admin credentials. You should see the Dashboard. Click on the 'Configure' pane, and follow the following steps.
-
-Configure the External Captive Portal
-+++++++++++++++++++++++++++++++++++++
-
-On the left menu, click on 'Advanced Configuration', then 'Authentication', then 'Captive Web Portals'. Click on 'New' to create a Captive Portal, configure it as follow:
-
-image::docs/images/aerohive-external-portal.png[scaledwidth="100%",alt="Captive Web Portal configuration"]
-
-Configure the AAA Servers
-+++++++++++++++++++++++++
-On the left menu, click on 'Advanced Configuration', then 'Authentication', then 'AAA Client Settings'. We need to add the PacketFence RADIUS server here. Click on the 'New' button, and provide follow this configuration.
-
-image::docs/images/aerohive-radius-pf.png[scaledwidth="100%",alt="RADIUS server configuration"]
-
-Click Ok to save your changes.
-
-Configure the Open SSID
-+++++++++++++++++++++++
-On the left menu, click on 'SSIDs'. Click the 'New' button, and configure the SSID like in the following screen capture:
-
-image::docs/images/aerohive-ssid-public.png[scaledwidth="100%",alt="SSID open configuration"]
-
-NOTE: Make sure to select 'Enable Captive Web Portal' when using Webauth.
-
-Click OK to save the SSID.
-
-Configure the Secure SSID
-+++++++++++++++++++++++++
-On the left menu, click on 'SSIDs'. Click the 'New' button, and configure the SSID like in the following screen capture:
-
-image::docs/images/aerohive-ssid-secure.png[scaledwidth="100%",alt="SSID secure configuration"]
-
-NOTE: Make sure to select 'Enable Captive Web Portal' when using Webauth.
-
-Click OK to save the SSID.
-
-Configure User Profile
-^^^^^^^^^^^^^^^^^^^^^^
-You will now need to create user profile matching your VLAN assignments, the "Default VLAN" have been created before to match the desired VLAN number.
-
-Create user profile as follow:
-
-image::docs/images/aerohive-user-profile-reg.png[scaledwidth="100%",alt="User profile registration"]
-
-image::docs/images/aerohive-user-profile-prod.png[scaledwidth="100%",alt="User profile production"]
-
-Configure SNMP
-^^^^^^^^^^^^^^
-You now need to configure the SNMP to add a valid read community string. Click on the 'Configure' pane, and on 'Advanced Configuration', then 'Management Policies', then 'SNMP Assignments'. Now click on 'New' and follow this configuration.
-
-image::docs/images/aerohive-add-snmp.png[scaledwidth="100%",alt="SNMP configuration"]
-
-
-Step 4: Configuration of Windows 7 client for DemoSecure
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-In `Control Panel\Network and Internet\Manage Wireless Networks`, click on 'Add'.
-Click 'Manually create a network profile'
-
-   Network name: DemoSecure
-   Security type WPA2-Enterprise
-   Encryption AES
-
-Next, change connection settings. On Security tab, click 'Settings', uncheck Validate server certificate.
-On the same tab click 'Configure' and uncheck Automatically use my Windows logon name and password.
-Return on the Security tab and click on 'Advanced settings'. On 802.1X settings, click on 'Specify authentication mode' and select User authentication.
-On 802.11 settings uncheck Enable Pairwise Master Key (PMK) caching.
-Validate all the modifications and click on 'Close'.
-
-Step 5: Test and Demonstrate
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Congratulations, you have everything setup and ready!  If your setup is properly configured, you should be able to:
-
-* reach (ping) the controller from the PacketFence environment
-* see the DemoOpen, and DemoSecure SSIDs
-* login the PacketFence administrative UI (https://management_IP:1443)
-* connects a client device on the DemoOpen SSID using demouser/demouser credentials on the captive portal
-* connects a client device on the DemoSecure SSID using demouser/demouser credentials in the Windows network login dialog
